# Music-Source-Separation-Training

./: .gitignore  inference.py  pyproject.toml  requirements.txt  requirements_msst+sov+ddsp+rift_uv.txt  requirements_msst+svc.txt  requirements_msst_uv.txt
configs/merged/multi_stem_models/: model_bandit_plus_dnr_sdr_11.yaml
configs/merged/single_stem_models/: denoise_mel_band_roformer_aufr33_sdr_27.yaml  dereverb_echo_mbr_fused_0.5_v2_0.25_big_0.yaml  dereverb_mel_band_roformer_anvuew_sdr_19.yaml  deverb_bs_roformer_8_256dim_8depth.yaml
configs/merged/vocal_models/: big_beta6.yaml  bs_roformer_karaoke_frazer_becruily.yaml  inst_v1e.yaml  mel_band_roformer_karaoke_aufr33_viperx_sdr_10.yaml  mel_band_roformer_karaoke_becruily.yaml  mel_band_roformer_vocals_becruily.yaml
models/bs_roformer/: bs_conformer.py
scripts/: inject_meta_to_config.py  migarate_from_webui.py
utils/: model_utils.py  n_io.py  settings.py
