[project]
name = "music-source-separation-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "pyloudnorm>=0.2.0",
    "tokenizers>=0.22.2",
]

[dependency-groups]
dev = [
    "jaxtyping>=0.3.7",
]
