[project]
name = "unified-svc"
version = "0.9.4"
description = "unified env for msst, rift-svc, sov, ddsp-svc"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "librosa>=0.11.0",
    "pyloudnorm>=0.2.0",
    "tokenizers>=0.22.2",
    "audiomentations>=0.24.0",
    "auraloss>=0.4.0",
    "beartype>=0.14.1",
    "bitsandbytes>=0.49.1",
    "click>=8.3.1",
    "einops>=0.8.2",
    "huggingface-hub>=1.4.1",
    "jaxtyping>=0.3.7",
    "lightning>=2.6.1",
    "lightning-utilities>=0.15.2",
    "loguru>=0.7.3",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "omegaconf>=2.2.3",
    "pillow>=12.1.0",
    "pyaudio>=0.2.14",
    "pyyaml>=6.0.3",
    "resampy>=0.4.3",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "torchdiffeq>=0.2.5",
    "torchmetrics>=0.11.4",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
    "matplotlib==3.10.8",
    "ml-collections==1.1.0",
    "loralib==0.1.2",
    "ruamel-yaml==0.19.1",
    "rotary-embedding-torch==0.8.9",
    "schedulefree==1.4.1",
    "torchfcpe==0.0.4",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
explicit = true
name = "pytorch-aliyun"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu130/"

[[tool.uv.index]]
explicit = true
name = "pytorch-official"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = [ {index = "pytorch-official"} ]
torchaudio = [ {index = "pytorch-official"} ]
torcvision = [ {index = "pytorch-official"} ]
